--- a/src/components/navigator.css
+++ b/src/components/navigator.css
@@ -3,17 +3,15 @@
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
+  position: relative;
+  min-height: 87vh;
   font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 2rem 2rem;
+  padding-top: 1rem;
 }
 
 .menu {
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-.menu li {
-  margin-bottom: 1rem;
 }
