--- a/src/components/link.css
+++ b/src/components/link.css
@@ -7,7 +7,7 @@
 
 .link a {
   font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
+  text-decoration: none;
   font-weight: 700;
 }
 
@@ -16,9 +16,10 @@
 }
 
 .link--primary {
-  text-decoration: none;
+  font-size: 12px;
+  color: #1ea7fd;
 }
 
 .link--secondary {
-  text-decoration: none;
+  color: #333;
 }
