--- a/src/pages/project.css
+++ b/src/pages/project.css
@@ -2,9 +2,10 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  margin: 1rem 2rem;
+  margin: 1rem 3rem;
 }
 
-.header {
+/* .header {
   margin-left: 1rem;
-}
+  margin-right: 1rem;
+} */
