--- a/src/components/navigator.css
+++ b/src/components/navigator.css
@@ -18,12 +18,13 @@
 
 .menu-header {
   color: #1ea7fd;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem 2rem 1rem 2rem;
   font-weight: 700;
+  font-size: 1rem;
 }
 
 .menu-subitem {
-  padding-left: 1rem;
+  padding-left: 2rem;
   padding-bottom: 0.3rem;
 }
 
