--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,5 +1,6 @@
 table {
   width: 100%;
+  border-collapse: collapse;
 }
 
 td,
@@ -10,5 +11,5 @@ th {
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #ddd;
 }
