--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,7 +1,7 @@
 table {
   width: 100%;
   height: fit-content;
-  margin: 0.9rem;
+  margin-top: 0.9rem;
   border-collapse: collapse;
   font-size: 0.9rem;
 }
